# sample-test

./: .env  .gitignore  Dockerfile  README.md  app.py  dev_deploy.sh  metrics_calc.py  openapi.json  pyproject.toml  requirements.txt  test_data.jsonl
.github/workflows/: deploy.yml  pytest.yml
dev_deployment/: ci_cd.sh  dev_deploy.sh  dev_deploy_test.sh
terraform/: apis.tf  backend.tf  github.tf  iam.tf  kms.tf  locals.tf  main.tf  providers.tf  redis.tf  service.tf  service_accounts.tf  storage.tf  telemetry.tf  terraform.tfvars  variables.tf  vpc.tf  wif.tf
terraform/vars/: env.tfvars
tests/integration/: test_agent.py  test_agent_engine_app.py  test_server_e2e.py
tests/unit/: test_guardrails.py  test_redis_plugin.py  test_web_fetch.py
vague_descriptions_checker/: adk_app.py  agent.py
vague_descriptions_checker/utils/: callbacks.py  logging.py  plugins.py  prompt.py  web_fetch.py
